--- a/index.html
+++ b/index.html
@@ -23,6 +23,15 @@ body, html {
   display: none;
 }
 </style>
+<!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-W8LKWQHTY8"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-W8LKWQHTY8');
+</script>
 </head>
 <body>
 
